err/schemaman.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/schemaman'...
Listing './lib/python3.5/site-packages/schemaman/action'...
Listing './lib/python3.5/site-packages/schemaman/action/config'...
Compiling './lib/python3.5/site-packages/schemaman/action/config/version_change_management.py'...
***   File "./lib/python3.5/site-packages/schemaman/action/config/version_change_management.py", line 21
    print 'Configure Version and Change Management'
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/schemaman/action/populate'...
Compiling './lib/python3.5/site-packages/schemaman/action/populate/schema_into_db.py'...
***   File "./lib/python3.5/site-packages/schemaman/action/populate/schema_into_db.py", line 21
    print 'Populate Schema Into DB'
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/schemaman/action/process.py'...
***   File "./lib/python3.5/site-packages/schemaman/action/process.py", line 22
    MODE_DIRECTORY = 0755
                        ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/schemaman/action/test'...
Compiling './lib/python3.5/site-packages/schemaman/action/test/test_vmcm.py'...
***   File "./lib/python3.5/site-packages/schemaman/action/test/test_vmcm.py", line 21
    print 'Test VMCM (Version and Change Managament)'
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/schemaman/datasource'...
Compiling './lib/python3.5/site-packages/schemaman/datasource/generic_handler.py'...
***   File "./lib/python3.5/site-packages/schemaman/datasource/generic_handler.py", line 18
    print tools
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/schemaman/datasource/mysql_handler'...
Compiling './lib/python3.5/site-packages/schemaman/datasource/mysql_handler/handler.py'...
***   File "./lib/python3.5/site-packages/schemaman/datasource/mysql_handler/handler.py", line 74
    print '%s: %s' % (table_name, item)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/schemaman/datasource/mysql_handler/query.py'...
***   File "./lib/python3.5/site-packages/schemaman/datasource/mysql_handler/query.py", line 18
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/schemaman/datasource/request.py'...
***   File "./lib/python3.5/site-packages/schemaman/datasource/request.py", line 83
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/schemaman/datasource/tools'...
Compiling './lib/python3.5/site-packages/schemaman/schemaman.py'...
***   File "./lib/python3.5/site-packages/schemaman/schemaman.py", line 42
    except getopt.GetoptError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/schemaman/utility'...
Compiling './lib/python3.5/site-packages/schemaman/utility/interactive_input.py'...
***   File "./lib/python3.5/site-packages/schemaman/utility/interactive_input.py", line 36
    print '\n%s' % intro_string
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/schemaman/utility/path.py'...
***   File "./lib/python3.5/site-packages/schemaman/utility/path.py", line 69
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/schemaman-0.1.54.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
